--- a/lesson2D/lesson2D.vcxproj
+++ b/lesson2D/lesson2D.vcxproj
@@ -139,6 +139,7 @@
     <ResourceCompile Include="lesson2D.rc" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="..\..\..\..\Downloads\les.bmp" />
     <Image Include="lesson2D.ico" />
     <Image Include="small.ico" />
   </ItemGroup>
