--- a/lesson2D/lesson2D.vcxproj.filters
+++ b/lesson2D/lesson2D.vcxproj.filters
@@ -46,7 +46,7 @@
       <Filter>Resource Files</Filter>
     </Image>
     <Image Include="..\..\..\..\Downloads\les.bmp">
-      <Filter>Source Files</Filter>
+      <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
 </Project>
