--- a/lesson2D/lesson2D.vcxproj.filters
+++ b/lesson2D/lesson2D.vcxproj.filters
@@ -45,5 +45,11 @@
     <Image Include="lesson2D.ico">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="les.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="test.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
