--- a/lesson2D/lesson2D.vcxproj
+++ b/lesson2D/lesson2D.vcxproj
@@ -139,6 +139,9 @@
     <ResourceCompile Include="lesson2D.rc" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="h.bmp" />
+    <Image Include="h1.bmp" />
+    <Image Include="hero.bmp" />
     <Image Include="les.bmp" />
     <Image Include="lesson2D.ico" />
     <Image Include="small.ico" />
