--- a/lesson2D/lesson2D.vcxproj.filters
+++ b/lesson2D/lesson2D.vcxproj.filters
@@ -51,5 +51,14 @@
     <Image Include="test.bmp">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="hero.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="h1.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="h.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
