--- a/lesson2D/lesson2D.vcxproj.filters
+++ b/lesson2D/lesson2D.vcxproj.filters
@@ -60,5 +60,8 @@
     <Image Include="h.bmp">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="need.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
