--- a/lesson2D/lesson2D.vcxproj.filters
+++ b/lesson2D/lesson2D.vcxproj.filters
@@ -90,5 +90,35 @@
     <Image Include="hemlet.bmp">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="B1.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="B2.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="B3.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="B4.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="B5.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="S1.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="S2.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="S3.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="S4.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="S5.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
