--- a/lesson2D/lesson2D.vcxproj
+++ b/lesson2D/lesson2D.vcxproj
@@ -166,6 +166,14 @@
     <Image Include="les.bmp" />
     <Image Include="lesson2D.ico" />
     <Image Include="need.bmp" />
+    <Image Include="portal0.bmp" />
+    <Image Include="portal1.bmp" />
+    <Image Include="portal2.bmp" />
+    <Image Include="portal3.bmp" />
+    <Image Include="portal4.bmp" />
+    <Image Include="portal5.bmp" />
+    <Image Include="portal6.bmp" />
+    <Image Include="portal7.bmp" />
     <Image Include="S1.bmp" />
     <Image Include="S2.bmp" />
     <Image Include="S3.bmp" />
